network-faults/billing-service-vs-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: billing-service
spec:
  hosts:
  - billing-service.rsns.svc.cluster.local
  http:
  - match:
    - port: 30002
    route:
    - destination:
        host: billing-service.rsns.svc.cluster.local
        port:
          number: 30002
    fault:
      delay:
        percentage:
          value: 50
        fixedDelay: 5s
      abort:
        httpStatus: 500
        percentage:
          value: 50
