network-faults/booking-service-vs-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: booking-service
spec:
  hosts:
  - booking-service.rsns.svc.cluster.local
  http:
  - match:
    - port: 30003
    route:
    - destination:
        host: booking-service.rsns.svc.cluster.local
        port:
          number: 30003
    fault:
      delay:
        percentage:
          value: 50
        fixedDelay: 5s
      abort:
        httpStatus: 500
        percentage:
          value: 50
