network-faults/booking-service-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: booking-service
spec:
  hosts:
  - booking-service.rsns.svc.cluster.local
  http:
  - match:
    - port: 30003
    route:
    - destination:
        host: booking-service.rsns.svc.cluster.local
        port:
          number: 30003
