network-faults/menu-service-vs-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: menu-service
spec:
  hosts:
  - menu-service.rsns.svc.cluster.local
  http:
  - match:
    - port: 30001
    route:
    - destination:
        host: menu-service.rsns.svc.cluster.local
        port:
          number: 30001
    fault:
      abort:
        percentage:
            value: 100
        httpStatus: 500
